--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
